# csp_toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
browser-extension/: README.md  background.js  csp-analyzer.js  manifest.json  popup.html  popup.js
browser-extension/icons/: generate-icons.html
nuclei-templates/: README.md  csp-broad-cdn-whitelist.yaml  csp-data-uri-script.yaml  csp-https-scheme-script.yaml  csp-missing-base-uri.yaml  csp-missing-object-src.yaml  csp-missing.yaml  csp-report-only.yaml  csp-unsafe-eval.yaml  csp-unsafe-inline.yaml  csp-wildcard-script.yaml
src/csp_toolkit/: __init__.py  __main__.py  _version.py  analyzer.py  bypass.py  cli.py  diff.py  discover.py  effective.py  export_ops.py  fetcher.py  generator.py  models.py  output.py  parser.py  probes.py  scanner.py  subdomain.py  tracker.py  violations.py
src/csp_toolkit/data/: bypass_patterns.json  cdn_gadgets.json  jsonp_endpoints.json
tests/: conftest.py  test_ai_violations.py  test_analyzer.py  test_bypass.py  test_cli.py  test_diff.py  test_discover.py  test_fetcher.py  test_generator.py  test_models.py  test_parser.py  test_probes.py  test_scanner.py  test_subdomain.py  test_tracker.py
