[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csp-toolkit"
version = "0.7.0"
description = "Parse, analyze, generate, and find bypasses in Content Security Policy headers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Carl Sampson", email = "chs@chs.us" }]
keywords = ["csp", "security", "content-security-policy", "bug-bounty", "web-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://chs.us/2026/03/csp-toolkit/"
Repository = "https://github.com/sampsonc/csp_toolkit"
Documentation = "https://github.com/sampsonc/csp_toolkit#readme"
Author = "https://chs.us"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-httpx",
    "ruff",
]
ai = [
    "anthropic>=0.30.0",
]

[project.scripts]
csp-toolkit = "csp_toolkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csp_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
